gcc/testsuite/rust/rustc/ui/issues/issue-47706-trait.rs
trait T {
    fn f(&self, _: ()) {
        None::<()>.map(Self::f);
    }
// { dg-error ".E0593." "" { target *-*-* } .-2 }
}

fn main() {}

